report lang -DONE

--- a/resources/lang/gu/datatable_gj.json
+++ b/resources/lang/gu/datatable_gj.json
@@ -1,15 +1,15 @@
 {
-	"sEmptyTable":     "કોષ્ટકમાં કોઈ ડેટા ઉપલબ્ધ નથી",
+	"sEmptyTable":     "કોઈ રેકોર્ડ ઉપલબ્ધ નથી",
 	"sInfo":           "(કુલ _MAX_ રેકોર્ડ માંથી _START_ થી _END_ ફિલ્ટર)",
-	"sInfoEmpty":      "0 પ્રવેશો 0 0 બતાવી રહ્યું છે",
-	"sInfoFiltered":   "(_MAX_ કુલ પ્રવેશો માંથી ફિલ્ટર)",
+	"sInfoEmpty":      "0 રેકોર્ડ બતાવી રહ્યું છે",
+	"sInfoFiltered":   "(_MAX_ કુલ રેકોર્ડ માંથી ફિલ્ટર)",
 	"sInfoPostFix":    "",
 	"sInfoThousands":  ",",
 	"sLengthMenu":     "બતાવો _MENU_ રેકોર્ડ",
 	"sLoadingRecords": "લોડ કરી રહ્યું છે ...",
 	"sProcessing":     "પ્રક્રિયા ...",
 	"sSearch":         "શોધો:",
-	"sZeroRecords":    "કોઈ મેળ ખાતા રેકોર્ડ મળી",
+	"sZeroRecords":    "કોઈ રેકોર્ડ મળ્યો નથી",
 	"oPaginate": {
 		"sFirst":      "પ્રથમ",
 		"sLast":       "અંતિમ",
